--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "prod":"node src/server/index.js"
   },
   "dependencies": {
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "axios": "^0.18.0",
+    "vue2-google-maps": "^0.10.7",
+    "vue-stripe-checkout": "^1.0.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
