removed keys; added vue2-google-maps

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
- <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoI7av5H3SWALDdJcwDBcRFS0-SAhP5vo"></script> -->
+ VUE_APP_PLACESKEY=AIzaSyAoI7av5H3SWALDdJcwDBcRFS0-SAhP5vo
+ VUE_APP_MAPS_KEY=AIzaSyAoI7av5H3SWALDdJcwDBcRFS0-SAhP5vo
