--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "prod":"node src/server/index.js"
+    "prod": "node src/server/index.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "dotenv": "^8.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "axios": "^0.18.0",
+    "vue-stripe-checkout": "^1.0.8",
     "vue2-google-maps": "^0.10.7",
-    "vue-stripe-checkout": "^1.0.8"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
