--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
  VUE_APP_PLACESKEY=AIzaSyAoI7av5H3SWALDdJcwDBcRFS0-SAhP5vo
  VUE_APP_MAPS_KEY=AIzaSyAoI7av5H3SWALDdJcwDBcRFS0-SAhP5vo
+ VUE_APP_STRIPE_PUBLISHABLE_KEY=pk_test_UWB3Uz5xAWTWkF0BznCORJgb
+VUE_APP_STRIPE_SECRET_KEY=sk_test_fa4WIVNTFutk2sQZO9AF54jh
