--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-stripe-checkout": "^1.0.8",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "body-parser": "^1.18.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.5.0",
